testdata/baselines/reference/compiler/classExpressionWithComputedPropertyInLoop.errors.txt
classExpressionWithComputedPropertyInLoop.tlua(5,22): error TS1109: Expression expected.
classExpressionWithComputedPropertyInLoop.tlua(5,23): error TS1011: An element access expression should take an argument.
classExpressionWithComputedPropertyInLoop.tlua(8,11): error TS2339: Property 'push' does not exist on type 'any[]'.
classExpressionWithComputedPropertyInLoop.tlua(8,16): error TS2304: Cannot find name 'class'.
classExpressionWithComputedPropertyInLoop.tlua(8,22): error TS1005: ',' expected.
classExpressionWithComputedPropertyInLoop.tlua(8,22): error TS2304: Cannot find name 'C'.
classExpressionWithComputedPropertyInLoop.tlua(8,24): error TS1005: ',' expected.
classExpressionWithComputedPropertyInLoop.tlua(10,10): error TS2304: Cannot find name 'field'.
classExpressionWithComputedPropertyInLoop.tlua(10,16): error TS1005: ',' expected.


==== classExpressionWithComputedPropertyInLoop.tlua (9 errors) ====
    // Class expression in a loop with a computed property name on an instance field.
    // The class temp variable should be block-scoped (let) to ensure each iteration
    // gets its own binding, matching the behavior when BlockScopedBindingInLoop is set.
    
    local array: any[] = [];
                         ~
!!! error TS1109: Expression expected.
                          
!!! error TS1011: An element access expression should take an argument.
    local key = "myKey";
    for i = 0, 2 do
        array.push(class C {
              ~~~~
!!! error TS2339: Property 'push' does not exist on type 'any[]'.
                   ~~~~~
!!! error TS2304: Cannot find name 'class'.
                         ~
!!! error TS1005: ',' expected.
                         ~
!!! error TS2304: Cannot find name 'C'.
                           ~
!!! error TS1005: ',' expected.
            [key] = i;
            #field = i;
             ~~~~~
!!! error TS2304: Cannot find name 'field'.
                   ~
!!! error TS1005: ',' expected.
        });
    end
    